tests/neg/GenericNumLits/Test_3.scala
object Test extends App {
  val e3: Even = 123456789101111 // error: number too large
}